--- a/styles/style.css
+++ b/styles/style.css
@@ -108,7 +108,7 @@ nav {
 
                                      /* Foooooooooooter */
 
-  .media-icon i {padding:0.4rem;background-color: rgb(36, 12, 12);}                                   
+  .media-icon i {padding:0.4rem;background-color: rgb(36, 12, 12);border-radius: 1rem;}                                   
 
 
        /* ========================== Media Queries ==============================*/
